fix: Fix border-radius on mobile

--- a/client/Modals/DesignerServicesModal/DesignerServicesModal.module.css
+++ b/client/Modals/DesignerServicesModal/DesignerServicesModal.module.css
@@ -92,6 +92,10 @@
 }
 
 @media (--mobile) {
+  .container {
+    border-radius: 0;
+  }
+
   .image {
     border-radius: 0;
   }
